# geonames-mcp-server

./: .gitignore  Dockerfile  README.md  docker-compose-test.yaml  docker-compose.yml  pyproject.toml  update.sh
example_client/: .env.example  Dockerfile  README.md  agent.py  agent_gemini.py  docker-compose.gemini.yaml  docker-compose.yaml  pyproject.toml
src/: initdata.py  main.py  services.py
tests/: conftest.py  test_tools.py
