[project]
name = "geonames-mcp-server"
version = "0.1.0"
description = "MCP Server for Geonames"
authors = [{ name = "Alessio Gerace", email = "alessio.gerace@gmail.com" }]
requires-python = "<4.0,>=3.10"
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "aiofiles>=0.5.0",
    "uvicorn[standard]>=0.37.0",
    "aiosqlite>=0.21.0",
    "fastmcp>=2.12.4"
]



[project.urls]
Homepage = "https://github.com/archetipo/geonames-mcp-server"
Repository = "https://github.com/archetipo/geonames-mcp-server"
Issues = "https://github.com/archetipo/geonames-mcp-server/issues"

[project.scripts]
duckduckgo-mcp-server = "src.main:main"

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "pytest-cov"]